--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 极客见闻(公众号:GeekBro)
+title: 极客见闻
 brief-intro: ""
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://geemaple.github.io" # the base hostname & protocol for your site
