--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: GeekBro
+title: 极客算法
 brief-intro: ""
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://geemaple.github.io" # the base hostname & protocol for your site
@@ -24,7 +24,7 @@ zhihu_username:
 linkedIn_username:
 dribbble_username:
 
-description_footer: A cat and his dream
+description_footer: GeekBro
 
 # comments
 # two ways to comment, only choose one, and use your own short name
@@ -49,5 +49,5 @@ tag_dir: tag/
 excerpt_separator: "\n\n\n\n"
 
 # paginate
-gems: [jekyll-paginate]
+gems: [jekyll-paginate, jekyll-sitemap]
 paginate: 6
