--- a/_config.yml
+++ b/_config.yml
@@ -45,9 +45,14 @@ kramdown:
 category_dir: category/
 tag_dir: tag/
 
+# plugins
+plugins:
+ - jekyll-paginate
+ - jekyll-sitemap
+ - jekyll-seo-tag
+
 # excerpt
 excerpt_separator: "\n\n\n\n"
 
 # paginate
-gems: [jekyll-paginate, jekyll-sitemap]
 paginate: 6
