--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ zhihu_username:
 linkedIn_username:
 dribbble_username:
 
-description_footer: GeekBro
+description_footer: 极客算法
 
 # comments
 # two ways to comment, only choose one, and use your own short name
