--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ xcschememanagement.plist
 tmp.*
 __dev__/.lc/cache
 __dev__/iOS/ClassObject/ClassObject.xcodeproj/project.xcworkspace/xcshareddata
+__dev__/iOS/Pthread/Pthread.xcodeproj/project.xcworkspace/xcshareddata
