--- a/_debug_config.yml
+++ b/_debug_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 极客算法
+title: 极客算法DEBUG
 brief-intro: ""
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://127.0.0.1:4000/" # the base hostname & protocol for your site
@@ -25,7 +25,7 @@ zhihu_username:
 linkedIn_username:
 dribbble_username:
 
-description_footer: 极客算法
+description_footer: 极客算法DEBUG
 
 # comments
 # two ways to comment, only choose one, and use your own short name
