--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,9 @@ description_footer: 极客算法
 duoshuo_shortname: #hygblog
 disqus_shortname: geemaple
 
-google_analytics_id: UA-118279055-1 # google 分析追踪id
+google_analytics_id: # UA-118279055-1 # google 分析追踪id
+google_tag_id: G-5PKFSPN668 # Google Analytics 4
+
 
 # Build settings
 markdown: kramdown
