--- a/_debug_config.yml
+++ b/_debug_config.yml
@@ -33,7 +33,8 @@ description_footer: 极客算法DEBUG
 duoshuo_shortname: #hygblog
 disqus_shortname: geemaple
 
-google_analytics_id: #UA-118279055-1 # google 分析追踪id
+google_analytics_id: UA-118279055-1 # google 分析追踪id
+google_tag_id: # G-5PKFSPN668
 
 # Build settings
 markdown: kramdown
