--- a/_debug_config.yml
+++ b/_debug_config.yml
@@ -9,8 +9,8 @@
 title: 极客算法DEBUG
 brief-intro: ""
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://127.0.0.1:4000/" # the base hostname & protocol for your site
-static: "http://127.0.0.1:4000/"
+url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
+static: "http://127.0.0.1:4000"
 
 permalink: /:categories/:title
 
